<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:text="@string/reset"
        android:textAllCaps="true"
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="@dimen/sixteen_dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="?android:selectableItemBackground" />

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/sixteen_dp"

        android:textColor="@color/colorPrimaryDark"
        android:background="?android:selectableItemBackground"/>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:layout_alignBaseline="@+id/btn_cancel"
        android:layout_alignBottom="@+id/btn_cancel"
        android:layout_toLeftOf="@+id/btn_cancel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_toStartOf="@+id/btn_cancel" />
</RelativeLayout>